--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,7 +67,7 @@ layout: default
 
         {% include previousAndNext.html %}
 
-        <h2 id="comments">Comments</h2>
+        <h2 id="comments">评论列表</h2>
         {% include comments.html %}
 
 
