--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -9,7 +9,7 @@ code{
     color: #000;
     background-color: rgba(0, 0, 0, 0.06);
     border: 1px solid #d7d0d2;
-    font-family: "Courier New",Monaco,Menlo,"Microsoft YaHei Mono",Consolas,monospace,sans-serif;
+    font-family: "Microsoft YaHei Mono",Monaco,Menlo,"Courier New",Consolas,monospace,sans-serif;
 }
 
 pre {
@@ -22,7 +22,7 @@ pre {
      > code {
          margin: 0;
          padding: 0;
-        font-size: 13px;
+        font-size: 15px;
         color:#d1d1c9;
         border: none;
         background-color: #272822
