modify code font

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -9,7 +9,7 @@ code{
     color: #000;
     background-color: rgba(0, 0, 0, 0.06);
     border: 1px solid #d7d0d2;
-    font-family: "Microsoft YaHei Mono",Monaco,Menlo,"Courier New",Consolas,monospace,sans-serif;
+    font-family: Monaco,Menlo,"Courier New",Consolas,"Microsoft YaHei Mono",monospace,sans-serif;
 }
 
 pre {
